kube-manifests/Front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: besant-tech-ingress
  namespace: default # you can change it if you want.
  annotations:
    # Required annotations for AWS ALB ingress controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]' # edit if you only want either connection.
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:region:account-id:certificate/certificate-id # Replace with your ACM certificate ARN
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/group.name: besant-tech
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=my-s3-bucket # Optional: for logging
  labels:
    app: besant-tech # This has to perfectly matched with you Front-Deployment app value.
spec:
  rules:
  - host: www.besanttechnologies.com
    http:
    # Add your own paths as you want
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: besant-tech-service
            port:
              number: 80
